<resources>
    <string name="app_name">StoryApp</string>

    <string name="welcome">Welcome to Story App.</string>
    <string name="logout">Log out</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login_title">Login.</string>
    <string name="login_body">Please log in using the registered account.</string>
    <string name="register_title">Register.</string>
    <string name="register_body">Please fill in your identity.</string>

    <string name="label_to_register">Don\'t have an account yet?</string>
    <string name="to_register"><u>register here</u></string>

    <string name="label_to_login">Already have an account?</string>
    <string name="to_login"><u>log in</u></string>
    <string name="menuLogout">Log out</string>

    <string name="placeholder_name">Name</string>
    <string name="placeholder_desc">Description</string>
    <string name="placeholder_date">Date</string>

    <string name="label_Gallery">Gallery</string>
    <string name="label_Camera">Camera</string>
    <string name="label_upload">Upload</string>
    <string name="label_detail_story">Detail Story</string>
    <string name="label_add_story">Add New Story</string>
    <string name="label_use_image">Use image from:</string>
    <string name="label_or">or</string>
    <string name="app_developer">ekorahy</string>
    <string name="label_by">by</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="try_again">Try again</string>
    <string name="time_out">Time Out</string>
    <string name="label_map_story">Map Story</string>
    <string name="location_activated">Location settings have been activated</string>
    <string name="enable_gps">You must enable GPS to create stories with locations!</string>
    <string name="get_my_location">Get location successfully.\n Latitude: %1f, Longitude: %2f</string>
    <string name="location_not_found">Location is not found. Please try again</string>
    <string name="no_media_selected">No Media Selected</string>
    <string name="no_picture_taken">No picture taken yet</string>
    <string name="image_not_available">Image not available</string>
    <string name="success">Success</string>
    <string name="ok">Oke</string>
    <string name="style_parsing_failed">Style parsing failed</string>
    <string name="cannot_found_style">Can\'t find style. Error: %s</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_must_lest_than_eight">Password cannot less than 8 character</string>
    <string name="successfully_login">You successfully login</string>
    <string name="confirmation">Confirmation!</string>
    <string name="confirmation_message_logout">Are you sure, you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_location">No data location</string>
    <string name="use_my_location">Use my location</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>

    <!-- content Description -->
    <string name="image_preview">Image preview</string>
    <string name="icon_date">Icon date</string>
    <string name="image_story">Image story</string>
    <string name="button_translate">Button translate</string>
    <string name="button_back">Button back</string>
    <string name="button_logout">Button logout</string>
    <string name="illustration_no_data">Illustration no data</string>
    <string name="fab_add">Floating action button add new story</string>
    <string name="image_logo">Image logo application</string>
</resources>